--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -29,12 +29,12 @@
           
           <div class="wrapper col-12 col-md-6 col-lg-4" *ngFor="let product of products">
             <div class="container">
-              <div class="top" style="background-image: url('{{product.image}}'); background-repeat: no-repeat; background-size: cover; background-position: center;">
+              <div routerLink="/product-details/{{product.uid}}" class="top imgZoom" style="background-image: url('{{product.image}}'); background-repeat: no-repeat; background-size: cover; background-position: center;">
                 <!-- <img src={{(product.image)}} class="imgZoom top" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" > -->
               </div>
               <div class="bottom">
                 <div class="info">
-                  <div class="details">
+                  <div class="details" routerLink="/product-details/{{product.uid}}">
                     <h1 style="font-size: 30px; width: 200px;">{{this.utilsService.maxShowText(product.title, 10)}}</h1>
                     <p *ngIf="product.offerPrice === 0" routerLink="/product-details/{{product.uid}}"><a>{{product.price}}€</a></p>
                     <p *ngIf="product.offerPrice > 0" routerLink="/product-details/{{product.uid}}"><a>{{product.offerPrice}}€</a></p>
@@ -45,7 +45,7 @@
                 </div>
               </div>
             </div>
-            <div class="inside">
+            <div class="inside" routerLink="/product-details/{{product.uid}}">
               <div class="icon"><i class="fa fa-info-circle" style="font-size: 30px;" aria-hidden="true"></i></div>
               <div class="contents">
                 <table>
