--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -17,7 +17,7 @@
         </tr>
         <tr *ngFor="let product of products" routerLink="/product-details/{{product.uid}}">
           <td>{{ product.title }}</td>
-          <td>{{ product.price }}</td>
+          <td>{{ product.price | formatNumber}}</td>
           <td>{{ product.stock }}</td>
           
           <!-- <td *ngIf="oferta.active">Activo &nbsp;&nbsp;<i style="font-size: 20px; color: green" class="fa fa-check-circle"></i></td>
