--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -1,5 +1,4 @@
-<img class="wave" src="../../../../../assets/img/wave3.png">
-<section class="h-100 h-custom">
+<section class="h-100 h-custom" style="background-color: #e3ffc986;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12">
@@ -27,7 +26,7 @@
                         <b class=""><</b>
                       </button>
 
-                      <p style="padding-top: 20px;" id="product{{product.uid}}">{{product.units}}</p>
+                      <p id="product{{product.uid}}">{{product.units}}</p>
 
                       <!-- <input id="form1" min="0" name="quantity" value="1" type="number"
                         class="form-control form-control-sm" /> -->
@@ -38,7 +37,7 @@
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">{{product.price.toFixed(2)}}€</h6>
+                      <h6 class="mb-0">{{product.price.toFixed(2) | formatNumber}}</h6>
                       <!-- <h6 id="productPriceUnit{{product.uid}}" class="mb-0">{{product.price * product.units}}</h6> -->
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
@@ -53,18 +52,18 @@
 
                   <div class="pt-5">
                     <h6 class="mb-0"><a (click)="this.location.back()" class="text-body"><i
-                      class="fas fa-long-arrow-alt-left me-2"></i>Volver a la tienda</a></h6>
+                      class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 bg-grey">
                 <div class="p-5">
-                  <h3 class="fw-bold mb-5 mt-2 pt-1">Resumen</h3>
+                  <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
                   <hr class="my-4">
 
                   <div *ngFor="let product of products" class="d-flex justify-content-between mb-4">
                     <h5 class="text-uppercase">{{this.utilsService.maxShowText(product.title, 20)}}</h5>
-                    <h5><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.price * product.units).toFixed(2)}}</span>€</h5>
+                    <h5><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.price * product.units) | formatNumber}}</span></h5>
                   </div>
 
                   <!-- <h5 class="text-uppercase mb-3">Shipping</h5>
@@ -83,7 +82,7 @@
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Precio Total</h5>
-                    <h5>{{totalPrice.toFixed(2)}}€</h5>
+                    <h5>{{totalPrice | formatNumber}}</h5>
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg" type="submit"
