--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -1,4 +1,5 @@
-<section class="h-100 h-custom" style="background-color: #e3ffc986;">
+<img class="wave" src="../../../../../assets/img/wave2.png">
+<section class="h-100 h-custom">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12">
@@ -36,8 +37,10 @@
                         <b>></b>
                       </button>
                     </div>
+                    
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">{{product.price.toFixed(2) | formatNumber}}</h6>
+                      <h6 *ngIf="product.offerPrice == 0" class="mb-0">{{product.price.toFixed(2) | formatNumber}}</h6>
+                      <h6 *ngIf="product.offerPrice > 0" class="mb-0">{{product.offerPrice.toFixed(2) | formatNumber}}</h6>
                       <!-- <h6 id="productPriceUnit{{product.uid}}" class="mb-0">{{product.price * product.units}}</h6> -->
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
@@ -63,7 +66,8 @@
 
                   <div *ngFor="let product of products" class="d-flex justify-content-between mb-4">
                     <h5 class="text-uppercase">{{this.utilsService.maxShowText(product.title, 20)}}</h5>
-                    <h5><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.price * product.units) | formatNumber}}</span></h5>
+                    <h5 *ngIf="product.offerPrice == 0"><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.price * product.units) | formatNumber}}</span></h5>
+                    <h5 *ngIf="product.offerPrice > 0"><span id="productPriceUnit{{product.uid}}" class="mb-0">{{(product.offerPrice * product.units) | formatNumber}}</span></h5>
                   </div>
 
                   <!-- <h5 class="text-uppercase mb-3">Shipping</h5>
