--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -40,7 +40,8 @@
                     <p *ngIf="product.offerPrice > 0" routerLink="/product-details/{{product.uid}}"><a>{{product.offerPrice | formatNumber }}</a></p>
                   </div>
                   <div class="addCart">
-                    <i (click)="addCarrito(product)" class="fa fa-cart-plus" style="font-size: 40px;" aria-hidden="true"></i>
+                    <i  *ngIf="product.stock > 0" (click)="addCarrito(product)" class="fa fa-cart-plus" style="font-size: 40px;" aria-hidden="true"></i>
+                    <span *ngIf="product.stock <= 0" class="badge badge-warning" style="background-color: #FFC107 !important; margin-top: 10px;">Sin stock</span>
                   </div>
                 </div>
               </div>
