--- a/frontend/src/app/components/graphics/dashboardNavbar/dashboardNavbar.component.html
+++ b/frontend/src/app/components/graphics/dashboardNavbar/dashboardNavbar.component.html
@@ -4,7 +4,7 @@
     <li class="edit"><a routerLink="/my-products">Mis Productos</a></li>
     <li class="write"><a routerLink="/create-product">Añadir Producto</a></li>
     <li class="comments"><a href="#">Comments</a></li>
-    <li class="users"><a href="#">Editar Perfil</a></li>
+    <li class="users"><a routerLink="/profile">Editar Perfil</a></li>
   </ul>
 </nav>
 
