--- a/frontend/src/app/components/views/public/productInfo/productInfo.component.html
+++ b/frontend/src/app/components/views/public/productInfo/productInfo.component.html
@@ -52,7 +52,7 @@
 						</h5> -->
 						<div class="action">
 							<!-- <button class="add-to-cart btn btn-default" type="button">add to cart</button> -->
-							<a class="btn btn-primary">+ Carrito</a>
+							<a class="btn btn-primary" (click)="addCarrito(product)">Añadir al carrito</a>
 							<!-- <button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button> -->
 						</div>
 					</div>
