mas cambios visuales + productSupport update

--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link" routerLink="/marketplace"><i class="bi bi-people-fill me-2"></i>Mercado</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Ayuda</a>
+          <a class="nav-link" routerLink="/product-support"><i class="bi bi-telephone-fill me-2"></i>Soporte</a>
         </li>
         <li class="nav-item rounded">
           <a class="nav-link" routerLink="/cart">
