--- a/frontend/src/app/components/views/private/editUser/editUser.component.html
+++ b/frontend/src/app/components/views/private/editUser/editUser.component.html
@@ -1,4 +1,4 @@
-<img class="wave" src="../assets/img/wave3.png">
+<img class="wave" src="../assets/img/wave2.png">
 
 <section class="container my-5">
 
@@ -91,8 +91,7 @@
        
       </div>  
      
-      <button type="submit" class="btn btn-primary btn-lg me-3"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
-      <button type="reset" class="btn btn-primary-soft btn-lg"><i class="fa-solid bi bi-arrow-clockwise me-2"></i>Reset</button>
+      <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary me-3" style="margin-top:30px; background-color: #69B190; border: none"><i class="fa-solid bi bi-send-fill me-2"></i>Guardar cambios</button>
     </form>
   </div>
 </section>
