campos solamente numericos

--- a/frontend/src/app/components/views/private/createProduct/createProduct.component.html
+++ b/frontend/src/app/components/views/private/createProduct/createProduct.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-sm-6 mb-4">
             <label for="price" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-person-fill me-2"></i>Precio</label>
-            <input formControlName="price" [(ngModel)]="this.product.price" type="number" id="price" name="price" class="form-control form-control-lg" required="" placeholder="" maxlength="60">
+            <input formControlName="price" [(ngModel)]="this.product.price" type="number" id="price" (input)="this.service.onlyNumbers(editProductForm, 'price')" name="price" class="form-control form-control-lg" required="" placeholder="" maxlength="60">
             <div class="invalid-feedback">Obligatiorio</div>
           </div>
           <div class="col-sm-6 mb-4">
@@ -22,11 +22,11 @@
           </div>
           <div class="col-sm-6 mb-4">
             <label for="stock" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Stock</label>
-            <input formControlName="stock" [(ngModel)]="this.product.stock" type="number" id="stock" name="stock" class="form-control form-control-lg" required="" placeholder="Your Email Address!" maxlength="100">
+            <input formControlName="stock" [(ngModel)]="this.product.stock" type="number" id="stock" name="stock" class="form-control form-control-lg" required="" maxlength="100" (input)="this.service.onlyNumbers(editProductForm, 'stock')">
           </div>
           <div class="col-sm-6 mb-4">
-            <label for="stars" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Stars</label>
-            <input formControlName="stars" [(ngModel)]="this.product.stars" type="number" id="stars" name="stars" class="form-control form-control-lg" required="" min="0" max="5">
+            <label for="stars" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Stars (0-5)</label>
+            <input formControlName="stars" [(ngModel)]="this.product.stars" type="number" id="stars" name="stars" class="form-control form-control-lg" required="" min="0" max="5" (input)="this.service.onlyNumbers(editProductForm, 'stars')">
           </div>
           
           <div class="">
