--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,3 +5,8 @@
 </div>
 
 <footerComponent></footerComponent>
+
+
+<ngx-spinner size="medium">
+    <spinnerComponent></spinnerComponent>
+</ngx-spinner>
